Added styles and functionality

--- a/color-flipper/color-flipper.html
+++ b/color-flipper/color-flipper.html
@@ -10,19 +10,13 @@
 </head>
 <body>
     <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <div class="vh-100 d-flex align-items-center justify-content-md-center">           
-                    <h4>Background Color: <span id='color'></span></h4>
-                </div>
-            <div>
-        </div>
-        <div class="col-md-6">
-            <div class="vh-100 d-flex align-items-center justify-content-md-center">               
-                <button id="btn" class="btn btn-lg btn-outline-dark text-uppercase">Click Me</button>
+        <div class="d-flex align-items-center justify-content-center vh-100">
+            <div class="d-flex flex-column">
+                <div class="mx-auto bg-dark bg-gradient text-white px-5 py-3 mb-3 rounded-pill">Background color : <span id="color">#5ABC936</span></div>
+                <div id="btn" class="btn btn-outline-dark btn-lg mx-5">CLICK ME</div>
             </div>
-        </div>    
+        </div>
     </div>
-    <script type="application/javascript" src="flip.js"></script>    
+    <script src="flip.js"></script>    
 </body>
 </html>
